--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,11 @@ margin-right: 40px;
   margin-bottom: 41px;
   padding: 68px 72px 85px 0px;
 
+  border-radius: 10px;
+background: #FAFAFA;
+
+box-shadow: 2px 4px 15px 0px rgba(0, 0, 0, 0.05);
+
 
 
 
@@ -181,6 +186,7 @@ background-color: #FAFAFA;;
   color: #2e363e;
   font-size: 16px;
   line-height: 1.4;
+  margin-bottom: 17px;
 }
 .price-btn {
   color: #5f0a61;
@@ -189,8 +195,14 @@ background-color: #FAFAFA;;
   font-style: normal;
   font-weight: 400;
   line-height: 1.1;
-  
+
+  background-color: #FAFAFA;;
+  border-bottom: 1px solid #5f0a61;
+
+  position: absolute;
+  right: 0;
 }
+
 
 .price-block-text{
     max-width: 676px;   
@@ -198,7 +210,13 @@ background-color: #FAFAFA;;
 }
 .price-block {
   display: flex;
-align-items: center;
-justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 
+position: relative;
 }
+
+
+
+/* footer */
+
